<resources>

    <string name="app_name">NoQ Fuel Station</string>

    <!-- SplashScreen Activity -->
    <string name="app_header">Shopping Redefined</string>

    <!-- MainActivity -->
    <string name="ma_enter_phone">Enter Phone No.</string>
    <string name="mob_no">Phone No.</string>
    <string name="cont">Continue</string>
    <string name="ma_footer">\u00a9 Radiate Labs</string>
    <string name="blank_phone">Please Enter the Phone No</string>>
    <string name="invalid_phone_number">Error! Invalid Phone Number</string>

    <!-- Intro Activity -->
    <string name="ia_header">For Fuel</string>
    <string name="ia_btn_desc">Get Started</string>
    <string name="ia_desc1">Simply scan code, Pay for the fuel via our app, and go!</string>
    <string name="ia_desc2">NoQ brings you the newest guaranteed way to save</string>
    <string name="ia_desc3">With the NoQ app gets 5% cash back(up to ₹50) with each refill</string>

    <!-- OTPConfirmActivity -->
    <string name="oc_enter_otp">Enter OTP</string>
    <string name="otp_sent_to">Sent to :</string>
    <string name="oc_otp">OTP</string>
    <string name="resend_otp">Resend</string>
    <string name="otp_reenter_mob_no_desc">Change Mobile Number? </string>
    <string name="otp_reenter_mob_no">Click Here!</string>
    <string name="invalid_otp">Invalid OTP!</string>
    <string name="blank_otp">Please Enter the OTP</string>

    <!-- UserCredentials Activity -->
    <string name="uca_register">Register</string>
    <string name="uca_name">Name(Required)</string>
    <string name="uca_email">Email(Optional)</string>
    <string name="uca_referral">Referral No(if any.)</string>
    <string name="required">Field is Required!!</string>

    <!-- Referral Activities -->
    <string name="ref_succ">Referral Successful</string>
    <string name="ref_desc">Rs.10 Referral Bonus has been credited to your account.</string>
    <string name="ref_fail">Referral Failed</string>
    <string name="ref_fail_msg">The Referral No. You have entered does not match any Existing User!</string>

    <!-- Covid19 Activity -->
    <string name="c19_h1">We value your safety and are facilitating this contactless method for you.</string>
    <string name="c19_h2">For Covid-19 updates please visit the following link : </string>
    <string name="c19_h6">https://www.mohfw.gov.in/</string>
    <string name="c19_h3">Stay safe with your family by taking necessary precautions.</string>
    <string name="c19_h5">“The Coronavirus situation has only worsened since its first occurrence, you and your family is at risk, however, life must go on and daily tasks cannot be avoided.
Refill your vehicle with the NoQ app and protect yourself from exchanging cash or making contact with anyone.
Protect yourself and your family with every small precaution you can take.” </string>
    <string name="c19_h4">100% contact free solution</string>
    <string name="c19_desc">COVID-19\nRESPONSE</string>

    <!-- CitySelect Activity -->
    <string name="acs_header">Choose your City</string>

    <!-- PetrolPumps Activity -->
    <string name="ppa_header">Choose a Petrol Pump</string>
    <string name="pp_change_city">Change City</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="ppa_profile">My Profile</string>
    <string name="ppa_nav_profile">Last Five Transactions</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_terms_cond">Terms and Conditions</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_refund_policy">Refund Policy</string>
    <string name="menu_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_bug_report">Send Bug Report</string>

    <!--  AboutUs Resources  -->
    <string name="as_title">About Us</string>
    <string name="as_desc1">We at RadiateLabs are on a mission to eliminate queues from the Retail Shops, because we understand that queuing up for kiosks is the most obsolete way of paying for items that you need.\nThrough our new app – NoQ, we enable customers to use their Smartphones to pay for items so that they can spend more time consuming, and less time buying.</string>

    <!--  ContactUs Resources  -->
    <string name="cs_title">Contact Us</string>
    <string name="cs_desc">Email : \nnoq@radiatelabs.com\nCompany Website : \nhttps://www.radiatelabs.com\nProduct Website : \nhttps://www.younoq.com\nPhone : \n+91 9158911702\nOur Phone Lines are Open 9 AM to 5 PM Everyday\nWe keep checking our email 24/7</string>

    <!--  RefundPolicy Resources  -->
    <string name="rp_title">Refund Policy</string>
    <string name="rp_desc">Our focus is complete customer satisfaction. In the event, if you are displeased with a product bought, the refund and return policy of the retailer from where
        you made the purchase would be used.</string>
    <string name="rp_h1">Refund Policy</string>
    <string name="rp_h1_desc1">The invoice sent to the phone number by message would be used as a bill for any refund request.\nPlease take the invoice message to the retailer and discuss with them any returns and refunds.\nThe User is responsible for understanding the Return &amp; Refund policy of the retailer before making any purchase,
        as RadiateLabs would not be responsible for any damages.\nThe return would be made to the suitable payment form as deemed by the retailer, RadiateLabs will not be involved in
        any discussion related to any return and refund request.</string>
    <string name="title_activity_test_policy">TestPolicy</string>

    <!-- BonusAmtDialog -->
    <string name="bonus_amt">₹100</string>
    <string name="bad_desc">Bonus have been credited to your account!</string>
    <string name="bad_congrats">Congratulations !</string>

    <!-- Payment Activity -->
    <string name="p_available_cash">Available NoQ Cash</string>
    <string name="p_term1">With NoQ, get flat discounts (upto ₹50) on each refill and a chance to win bonus of ₹500 every week!</string>
    <string name="p_p_details">Payment Details</string>
    <string name="p_amt">Amount</string>
    <string name="p_cash">NoQ Cash Used</string>
    <string name="p_discount">Flat Discount</string>
    <string name="p_clc_amt">Final Amount</string>
    <string name="p_edit_text_label">₹</string>
    <string name="p_rs_50">50</string>
    <string name="p_rs_300">300</string>
    <string name="p_rs_500">500</string>
    <string name="p_rs_1000">1000</string>

    <!-- Payment Successful Activity -->
    <string name="ps_succ">Payment Successful</string>
    <string name="pf_fail">Payment Failed</string>
    <string name="ps_pay_method">Payment Method</string>
    <string name="ps_order_type">Order Type</string>
    <string name="ps_thanks">Thank you for using NoQ for your fuel!</string>
    <string name="ps_desc">You could now leave the store\n As per Your Convenience.</string>
    <string name="ps_school">You\'ve Successfully Paid your Dues.</string>
    <string name="ps_scan">Continue</string>
    <string name="ps_profile">Home</string>
    <string name="pf_desc">Please Try Again!</string>
    <string name="pf_retry">Retry</string>
    <string name="ps_total_amt">NoQ Amount</string>
    <string name="ps_savings_by_us">You Saved</string>
    <string name="ps_receipt">Invoice No.</string>
    <string name="ps_tot_price">Total Our Price : </string>
    <string name="ps_tot_retail_price">Total Retail Price</string>
    <string name="ps_ref_amt">Referral Used</string>
    <string name="ps_purchased_Items">Purchased Items</string>
    <string name="ps_no_of_items">No. of Items</string>
    <string name="ps_in_store">In Store</string>
    <string name="ps_home_delivery">Home Delivery</string>
    <string name="ps_takeaway_desc">You can collect your order in 30 minutes</string>
    <string name="ps_bonus">Bonus Received</string>
    <string name="ps_updated_red">Updated Referral bal.</string>
    <string name="ps_tot_amt">Fuel Sale Price</string>
    <string name="ps_noq_header">Click here to get the NoQ app now!</string>
    <string name="ps_noq_desc">Use our contactless shopping app for more discounts at your local stores and a chance to win up to ₹5000 as cashback</string>

    <!-- UserProfile Activity -->
    <string name="up_title">Profile</string>
    <string name="up_referral_bonus">Referral Bonus</string>
    <string name="up_phone">Phone No.</string>
    <string name="up_email">Email</string>
    <string name="up_logout">Logout</string>

    <!-- LastFiveTxns Activity -->
    <string name="lft_header">Transactions</string>
    <string name="lft_nav_profile">Last Five Transactions</string>
    <string name="lft_onclick">Click on Transactions to View more Details.</string>
    <string name="tc_receipt_no">Receipt No : </string>
    <string name="tc_tot_amt">Fuel Sale Price : </string>

    <!-- TxnDetails Activity -->
    <string name="td_amt">Paid : </string>
    <string name="td_paid_to">To : </string>
    <string name="td_cart_item">Purchased Items</string>
    <string name="td_payment_mode">Payment Mode</string>
    <string name="td_receipt_no">Receipt No</string>
    <string name="td_items">Items</string>
    <string name="td_expand_info">(Tap on an Item to view Details)</string>
    <string name="td_date">Date : </string>
    <string name="td_tot_price">Amt. Paid</string>
    <string name="td_you_saved">You Saved</string>

    <!-- TxnDetails Card Activity -->
    <string name="tdc_b_code">Barcode</string>
    <string name="tdc_retailer_price">Retailer Price</string>

    <!-- SendBugReport Activity -->
    <string name="sbr_header">Send Bug report</string>
    <string name="sbr_btn">Send Report</string>
    <string name="sbr_desc">We\'re Sorry for any inconvenience that you may have encountered while using our app. By Clicking on the button below you send a Bug report(log) of the app to us, so that we can analyze it and make sure that
    neither you nor anyone in future comes across the issue(s) further.</string>

    <!-- SlideFirstFragment -->
    <string name="sff_header">Pay on the Go!</string>
    <string name="sff_desc">Select Station, Pay for the fuel and go!</string>

    <!-- SlideSecondFragment -->
    <string name="ssf_header">Earn Rewards</string>
    <string name="ssf_desc">Earn Joining bonus up to ₹100</string>

    <!-- SlideThirdFragment -->
    <string name="stf_header">More Discounts!</string>
    <string name="stf_desc">Discount up to ₹50 and ₹500 reward for a lucky winner every week!!</string>


</resources>