<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.younoq.noqfuelstation.views.PaymentFailed">

    <LinearLayout
        android:id="@+id/ps_linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ps_logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_icon_pay_fail"/>

        <TextView
            android:id="@+id/tv_succ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/pf_fail"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ps_logo" />

        <TextView
            android:id="@+id/pf_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/pf_desc"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ps_linear_layout1">

        <TextView
            android:id="@+id/pf_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Desi Farms, Forest County"
            android:textColor="#707070"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Order Time"
                android:textColor="#707070"
                android:textSize="14sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/pf_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="2020-04-23, 06:23pm"
                android:textColor="@color/primaryDarkColor"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ps_pay_method"
                android:textColor="#707070"
                android:textSize="14sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/pf_pay_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Debit card"
                android:textColor="#707070"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/otp_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/primaryDarkColor"
                android:onClick="Go_to_Home"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/ps_profile"
                android:textAllCaps="false"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="#FFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_resend_otp"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/primaryDarkColor"
                android:onClick="Go_to_Payment"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/pf_retry"
                android:textAllCaps="false"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="#FFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="5dp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>